view/html/css/print.css
body {
	font-size: 10px;
}

.schedule img {
	width: 50%;
	height: auto;
	float: left;
}

.event-schedule thead th:nth-child(1) { 
	width: 15%;
}

.event-schedule thead th:nth-child(2) { 
	width: 45%;
}

.event-schedule thead th:nth-child(3) { 
	width: 20%;
}

.event-schedule thead th:nth-child(4),
.event-schedule thead th:nth-child(5) { 
	width: 5%;
	overflow: hidden;
}

div[role=alert],
.event-description,
.panel-event {
	display: none;
}

a[href]:after {
	content: none !important;
}

.footer-partners {
	position: relative;
}

.footer-partners img {
	width: 20%;
	float: left;
	margin-right: 30px;
	margin-top: 20px;
}

.logo-uffs {
	width: 40px !important;
	height: auto;
}

.logo-santamaria {
	width: 400px !important; 
}

.logo-gambdias {
	width: 180px !important; 
	height: auto;
}

.logo-fronteiratec {
	width: 180px !important; 
	height: auto;
}

footer img {
	display: none;
}

